@@ -1,6 +1,7 @@
 serd (0.25.0) unstable;
 
   * Add support for NQuads
+  * Add support for SPARQL PREFIX and BASE directives
 
  -- David Robillard <d@drobilla.net>  Thu, 05 Jan 2017 16:20:09 -0500
 
